// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match the snapshot 1`] = `
<a
  className="sc-bdVaJa hPSpy"
  onClick={[MockFunction]}
>
  example
</a>
`;

exports[`RandomButton should match the snapshot 1`] = `
<a
  className="sc-bwzfXH hufrb"
  onClick={[MockFunction]}
>
  example
</a>
`;
